chore: clear unchecked and deprecation warnings